# sqlmesh_jaffle_shop_dbt

./: .gitignore  .tool-versions  README.md  devbox.json  jaffle_shop_duckdb_column_lineage.ipynb  profiles.yml  pyproject.toml
macros/: add.sql
models/staging/: stg_payments.sql
tests/: test_customers.yml  test_stg_customers.yml  test_stg_payments.yml
