[tool.poetry]
name = "jaffle-shop"
version = "0.1.0"
description = ""
authors = ["Tim Chan"]
readme = "README.md"
packages = [{include = "jaffle_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlmesh = {extras = ["web"], version = "^0.13.1"}
pyarrow = "^12.0.0"
dbt-duckdb = "^1.5.1"
duckdb = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
